[workspace]
members = ["crates/*", "dev/*", "tests/narxia-test-runner"]
default-members = ["crates/narxia-driver"]
resolver = "2"

[profile.release]
debug = true

[profile.dev.package."rowan"]
opt-level = 3

[profile.dev.package."libtest-mimic"]
opt-level = 3

[profile.dev.package."narxia-syn"]
opt-level = 3

[workspace.dependencies]
narxia-driver = { path = "crates/narxia-driver" }
narxia-hir = { path = "crates/narxia-hir" }
narxia-hir-db = { path = "crates/narxia-hir-db" }
narxia-log = { path = "crates/narxia-log" }
narxia-log-impl = { path = "crates/narxia-log-impl" }
narxia-src-db = { path = "crates/narxia-src-db" }
narxia-syn = { path = "crates/narxia-syn" }
narxia-syn-db = { path = "crates/narxia-syn-db" }
narxia-syn-helpers = { path = "crates/narxia-syn-helpers" }

dir-structure-macros = { path = "dev/dir-structure-macros", version = "0.1.3" }
dir-structure = { path = "dev/dir-structure", version = "0.1.3" }

clap = { version = "4.4.3", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
colored = "2.0.4"
bitflags = "2"
libtest-mimic = "0.6.1"
miette = { version = "5.10.0", features = ["fancy"] }
path-absolutize = "3.1.1"
salsa = { path = "crates/narxia-salsa" }
rowan = "0.15.11"
drop_bomb = "0.1.5"
smallvec = "1.10.0"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
