[package]
name = "salsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "d4a94fbf07bb837f3d9d0a4caa5db4d5db29243f", package = "salsa-2022" }
