[package]
name = "narxia-syn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored.workspace = true
rowan.workspace = true
drop_bomb.workspace = true
smallvec.workspace = true
bitflags.workspace = true

narxia-syn-helpers.workspace = true
narxia-log.workspace = true
