[package]
name = "dir-structure-macros"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "dir-structure: proc-macros"
repository = "https://github.com/dnbln/narxia/tree/trunk/dev/dir-structure-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
