[package]
name = "dir-structure"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simple crate to create directory structures."
repository = "https://github.com/dnbln/narxia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde", "serde_json"]

[dependencies]
dir-structure-macros.workspace = true
thiserror.workspace = true
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
