[package]
name = "narxia-test-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored.workspace = true
libtest-mimic.workspace = true
dir-structure.workspace = true
miette.workspace = true

narxia-driver.workspace = true
narxia-hir.workspace = true
narxia-hir-db.workspace = true
narxia-syn.workspace = true

[[test]]
name = "parsing_tests"
path = "tests/parsing_tests.rs"
harness = false

[[test]]
name = "syntree_correctness"
path = "tests/syntree_correctness.rs"

[[test]]
name = "syntree_completeness"
path = "tests/syntree_completeness.rs"
harness = false

[[test]]
name = "no_dummy_hir_ids_left_after_lowering"
path = "tests/no_dummy_hir_ids_left_after_lowering.rs"
harness = false
